Comment Cleanup and Another Attempted Nav Spacing Fix

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -14,7 +14,6 @@ body
 
     color: $clr-dark-sapphire;
     background-color: $clr-cream;
-    //background: url('/assets/images/TileablePatternBlack-168.png') repeat;
     
     padding: 0;
     margin: 0;
@@ -29,12 +28,7 @@ h1, h2, h3, h4, h5, h6
     font-weight: 400;
     font-style: normal;
 
-    //font-family: "brandon-grotesque", sans-serif;
     text-transform: uppercase;
-    //font-weight: bold;
-    
-    //margin-top: 1.5rem;
-    //margin-bottom: .75rem;
 }
 
 p {
@@ -127,8 +121,12 @@ $max-width: 900px;
     .nav-spacer {
         display: none;
         visibility: hidden;
+        max-height: 0px;
         height: 0px;
-        padding-top: 0px;
+        max-width: 0px;
+        width: 0px;
+        padding: 0px;
+        margin: 0px;
     }
 }
 
