--- a/_sass/includes/navbar.scss
+++ b/_sass/includes/navbar.scss
@@ -5,7 +5,6 @@ nav.main {
     font-weight: 600;
 
     @media (max-width: 991px) {
-        //padding-bottom: 2px;
         background-color: $clr-cream;
         //background: linear-gradient(90deg, $clr-jalapeno-red 10%, $clr-mandarin-red 20%, $clr-squash-blossom 40%, $clr-flat-flesh 50%, $clr-squash-blossom 60%, $clr-mandarin-red 80%, $clr-jalapeno-red 90%);
 
@@ -27,8 +26,6 @@ nav.main {
             align-items: center;
             visibility: hidden;
             opacity: 0;
-            //max-height: 0px;
-            //overflow: hidden;
             gap: 0px;
             transition: visibility 0s, opacity 0.3s, max-height 0.3s;
             margin-bottom: 0px;
@@ -36,14 +33,6 @@ nav.main {
             .link {
                 min-width: 6rem;
                 align-items: center;
-                //display: flex;
-
-                > * {
-                    //max-height: 0px;
-                    //height: 0px;
-                    //max-width: 0px;
-                    //width: 0px;
-                }
             }
         }
 
@@ -51,23 +40,11 @@ nav.main {
             display: grid;
             visibility: visible;
             opacity: 1;
-            //max-height: 24rem;
-            //overflow: visible;
             gap: 0.5rem;
             margin-bottom: 0.5rem;
-
-            .link {
-                > * {
-                    //max-height: 100%;
-                    //height: 100%;
-                    //min-height: 100%;
-                    //max-width: 100%;
-                    //width: 100%;
-                }
-            }
         }
 
-        .dots {
+        .dots, .dot-1, .dot-2, .dot-3, .dot-4 {
             display: none;
             visibility: hidden;
             opacity: 0;
